<resources>
    <string name="app_name">MineSweeper</string>
    <string name="game_clock">00:00</string>
    <string name="columns">Columns</string>
    <string name="size">Size of Board</string>
    <string name="start_game">Start Game!</string>
    <string name="rows">Rows</string>
    <string name="bombs">Bombs</string>
    <string name="welcome">Welcome to Minesweeper</string>
    <string name="game_score">0</string>
    <string name="invalid">We don\'t do that here</string>
    <string name="whattodo">I\'mma be honest, I have no clue what to do.</string>
    <string name="cancel">Cancel</string>
    <string name="restart">Restart?</string>
    <string name="lost">You lost... unfortunately</string>
    <string name="score">Score:</string>
    <string name="lose">You have lost the game!</string>
    <string name="win">You have won the game!</string>
    <string name="no_default">no default</string>
    <string name="explain">Leave empty to use default values which can be changed in the settings.</string>
    <string name="good_luck">New game, good luck!</string>
</resources>