<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:gravity="center_horizontal"
            android:text="@string/score"
            android:textSize="24sp"
            android:onClick="easter"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:gravity="center_horizontal"
            android:id="@+id/score"
            android:textSize="20sp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/game_score"
            android:onClick="easter"
            />

        <GridView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:stretchMode="columnWidth"
            android:verticalSpacing="0px"
            android:id="@+id/game_grid"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:onClick="restart"
            android:text="@string/restart"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>